--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         let deliveryCount = '';
         let gelnailsCount = '';
         let budgetyCount = '';
-        let menuCount = '';
+    let selectedMenus = [];
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
@@ -452,17 +452,16 @@
             budgetyCount = element.innerText;
         }
 
-        function selectmenu(element) {
+    function selectmenu(element) {
         const menuText = element.innerText;
-        
-        // ボタンの選択状態の切り替え
+
+        // クラスの切り替え
         element.classList.toggle('active');
 
-        // 選択されたメニューの管理
         if (element.classList.contains('active')) {
-            menuCount.push(menuText);
+            selectedMenus.push(menuText);
         } else {
-            menuCount = menuCount.filter(item => item !== menuText);
+            selectedMenus = selectedMenus.filter(menu => menu !== menuText);
         }
     }
 
@@ -480,7 +479,7 @@
             deliveryCount: deliveryCount;
             gelnailsCount: gelnailsCount;
             budgetyCount: budgetyCount;
-            menuCount: menuCount.join(', ')
+            menuCount: selectedMenus.join('、') // 選択されたメニューを結合
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
