--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
         let deliveryCount = '';
         let gelnailsCount = '';
         let budgetyCount = '';
-    let selectedMenus = [];
+        let selectedMenus = [];
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
@@ -452,7 +452,7 @@
             budgetyCount = element.innerText;
         }
 
-    function selectmenu(element) {
+        function selectmenu(element) {
         const menuText = element.innerText;
 
         // クラスの切り替え
@@ -479,7 +479,7 @@
             deliveryCount: deliveryCount;
             gelnailsCount: gelnailsCount;
             budgetyCount: budgetyCount;
-            menuCount: selectedMenus.join('、') // 選択されたメニューを結合
+            menuCount: menuCount;
 
             /* フォームデータをオブジェクトにまとめる */
             const formData = {
@@ -495,7 +495,7 @@
                 deliveryCount,
                 gelnailsCount,
                 budgetyCount,
-                menuCount
+                menuCount: selectedMenus.join('、') // 選択されたメニューを結合
             };
 
             // LINEトークにメッセージを送信
