--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
             message3,
             message4,
             message5,
-            menuCount: menuCount.join('、') // 配列を「、」区切りで結合
+            menuCount: menuCount.join('\n・') // 改行区切りにする
         };
 
             // LINEトークにメッセージを送信
