--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>ゆびノさき<br>アンケート</h1>
+        <h1>ゆびノさき１１<br>アンケート</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -479,6 +479,12 @@
             message5,
             menuCount: menuCount.join('\n・') // 改行区切りにする
         };
+
+            // フォームデータのチェック
+            if (!formData.message) {
+                alert('お名前を入力してください。');
+                return;
+            }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
