--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>ゆびノさき１１<br>アンケート</h1>
+        <h1>ゆびノさき<br>アンケート</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　オオサカ　タロウ）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
@@ -470,19 +470,106 @@
         const message3 = document.getElementById('message3').value;
         const message4 = document.getElementById('message4').value;
         const message5 = document.getElementById('message5').value;
+        priorityCount: priorityCount;
+            demandCount: demandCount;
+            chanceCount: chanceCount;
+            IntroductionCount: IntroductionCount;
+            deliveryCount: deliveryCount;
+            gelnailsCount: gelnailsCount;
+            budgetyCount: budgetyCount;
+            menuCount: menuCount;
 
         const formData = {
             message,
-            message2,
-            message3,
-            message4,
-            message5,
+                message2,
+                message3,
+                message4,
+                message5,
+                priorityCount,
+                demandCount,
+                chanceCount,
+                IntroductionCount,
+                deliveryCount,
+                gelnailsCount,
+                budgetyCount,
             menuCount: menuCount.join('\n・') // 改行区切りにする
         };
 
             // フォームデータのチェック
             if (!formData.message) {
                 alert('お名前を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message2) {
+                alert('電話番号を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message3) {
+                alert('住所を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message4) {
+                alert('生年月日を入力してください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.priorityCount) {
+                alert('サロンに求める最も優先度が高いものは何ですか？をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.demandCount) {
+                alert('サロンに求めるものをもう一つ教えてください。をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.chanceCount) {
+                alert('当店を知ったきっかけは何ですか？をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.message5) {
+                alert('ご紹介を選択された方はご紹介のお名前を教えてください。をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.IntroductionCount) {
+                alert('ご利用店舗を教えてくださいをご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.deliveryCount) {
+                alert('クーポンやお得な情報を配信してもよろしいでしょうか？をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.gelnailsCount) {
+                alert('ジェルネイルは初めてですか？をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.budgetyCount) {
+                alert('毎月のネイルにご予算はございますか？をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.menuCount) {
+                alert('気になるネイルメニューはございますか？をご選択ください。');
                 return;
             }
 
