--- a/index.html
+++ b/index.html
@@ -441,15 +441,13 @@
         }
 
         function selectbudgety(element) {
-            const budgetyName = element.innerText;
+            // すべてのボタンの選択状態をクリア
+            const buttons = document.querySelectorAll('.budgety-buttons button');
+            buttons.forEach(button => button.classList.remove('active'));
 
-            if (element.classList.contains('active')) {
-                element.classList.remove('active');
-                budgetyCount = budgetyCount.filter(budgety => budgety !== budgetyName);
-            } else {
-                element.classList.add('active');
-                budgetyCount.push(budgetyName);
-            }
+            // 選択されたボタンだけにactiveクラスを追加
+            element.classList.add('active');
+            budgetyCount = element.innerText;
         }
 
         function selectmenu(element) {
