--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <body>
     <div class="container">
-        <h1>ゆびノさき<br>アンケート</h1>
+        <h1>ゆびノさき１１１１<br>アンケート</h1>
         <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
         <div class="label">お名前フルネームで教えてください<br>（例　大阪　太郎　おおさか　たろう）</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
