--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 <body>
     <div class="container">
         <h1>Andova<br>アンケート</h1>
-        <div class="info-text">以下全て入力後<br>【アンケート送信】ボタンを押してください。</div>
+        <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
         <div class="label">ご来店日(例:西暦記載 ○年○月○日)</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
@@ -327,10 +327,10 @@
         <textarea id="message8" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">重要項目の同意</div>
-        <div class="info-text">①トークでのご予約の受付・変更・キャンセルについては承っておりません。全てTELにてお願いいたします😊✨ <br>
-            ②お直しのお問い合わせに関しましては、トークに詳細と合わせ状態のお写真なども添えていただけるとスムーズなやり取りとご案内ができます。また、TELでも承っており、その場でのご案内が可能です。<br>※トークの場合、施術対応中などでご返信が遅くなることがございます。
-            <br>③お持ち込みネイルのお問い合わせに関しましては、リピーター様のみ受付ており、全てこちらのLINEにてご対応させて頂きます。 ご予約される前にこちらのLINEに持ち込みデザイン画像とご要望の送信をお願い致します。持ち込みデザインについてのご相談をさせていただきます。また、施術にかかるお時間、料金、ご予約時選択するメニュー等なども合わせてご連絡させていただきます。 
-            <br>④LINEお問い合わせのご対応時間について 営業時間中の10:00〜20:00とさせていただきます。 それ以外の時間のご返信は致しかねますことご了承を願います。 また、営業時間中につきましても施術対応中などにより返信が遅くなる場合がありますことも重ねてご了承を願います。</div>
+        <div class="info-text">①トークでのご予約の受付・変更・キャンセルについては承っておりません。全てTELにてお願いいたします😊✨ 
+            <br><br>②お直しのお問い合わせに関しましては、トークに詳細と合わせ状態のお写真なども添えていただけるとスムーズなやり取りとご案内ができます。また、TELでも承っており、その場でのご案内が可能です。<br>※トークの場合、施術対応中などでご返信が遅くなることがございます。
+            <br><br>③お持ち込みネイルのお問い合わせに関しましては、リピーター様のみ受付ており、全てこちらのLINEにてご対応させて頂きます。 ご予約される前にこちらのLINEに持ち込みデザイン画像とご要望の送信をお願い致します。持ち込みデザインについてのご相談をさせていただきます。また、施術にかかるお時間、料金、ご予約時選択するメニュー等なども合わせてご連絡させていただきます。 
+            <br><br>④LINEお問い合わせのご対応時間について 営業時間中の10:00〜20:00とさせていただきます。 それ以外の時間のご返信は致しかねますことご了承を願います。 また、営業時間中につきましても施術対応中などにより返信が遅くなる場合がありますことも重ねてご了承を願います。</div>
         <div class="budgety-buttons">
             <button type="button" id="onebudgety" onclick="selectbudgety(this)">同意する</button>
             <button type="button" id="twobudgety" onclick="selectbudgety(this)">同意しない</button>
@@ -347,7 +347,6 @@
         let IntroductionCount = '';
         let deliveryCount = '';
         let budgetyCount = '';
-        let menuCount = [];
 
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
