--- a/index.html
+++ b/index.html
@@ -514,13 +514,13 @@
             }
 
             // フォームデータのチェック
-            if (!formData.formData.IntroductionCount) {
+            if (!formData.IntroductionCount) {
                 alert('過去施術をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
-            if (!formData.formData.deliveryCount) {
+            if (!formData.deliveryCount) {
                 alert('薬品/ネイルでのアレルギーをご選択ください。');
                 return;
             }
