--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\n予約：仮予約\nお迎え先：\n ${formData.message2}\nお帰り先：\n ${formData.message3}\n希望日時：\n ${formData.dates[0]}\nメッセージ：\n${formData.message}`
+                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.phone}\n\n予約：仮予約\n\nお迎え先：\n ${formData.message2}\n\nお帰り先：\n ${formData.message3}\n\n希望日時：\n ${formData.dates[0]}\n\nメッセージ：\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('担当より折返しの電話でご予約完了となりますので予めご了承下さい。');
@@ -678,7 +678,7 @@
                     }
 
                     // 30分後の時刻を計算
-                    const thirtyMinutesLater = new Date(now.getTime() + 30 * 60 * 1000);
+                    const thirtyMinutesLater = new Date(now.getTime() + 15 * 60 * 1000);
 
                     // 時間を26時～30時に変換する関数
                     function normalizeTime(date) {
