--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             }
 
             // 日付部分を「○○年○○月○○日 25:○○」形式に変換
-            selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${hour}:${minute}`;
+            selectedFullDate = `月${('0' + date.getDate()).slice(-2)}日 ${hour}:${minute}`;
 
             // 希望日時を即座に更新
             updateDisplayInfo();
