--- a/index.html
+++ b/index.html
@@ -522,8 +522,7 @@
                 <span class="highlight-text">◆美眉メニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')"
-                    data-price="15000">ハリウッドブロウリフト(HBL)</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="1">ハリウッドブロウリフト(HBL)</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">眉デザインWAX</button>
             </div>
         </div>
@@ -544,8 +543,7 @@
                 <span class="highlight-text">◆美容整体メニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">クイックコース
-                    30分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment5')" data-price="15000">クイックコース 30分</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment6')" data-price="15000">全身コース 60分</button>
             </div>
         </div>
@@ -555,9 +553,8 @@
                 <span class="highlight-text">◆小顔脳洗浄メニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="15000">デフォルトコース
-                    60分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">オイルコース 90分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment7')" data-price="1">デフォルトコース 60分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="1">オイルコース 90分</button>
             </div>
         </div>
 
@@ -566,10 +563,8 @@
                 <span class="highlight-text">◆よもぎ蒸しメニュー◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">クイックコース
-                    30分</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="15000">じっくりコース
-                    50分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="1">クイックコース 30分</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment10')" data-price="1">じっくりコース 50分</button>
             </div>
         </div>
 
@@ -638,7 +633,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: ''
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -650,8 +645,8 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目': 0,
-            '2回目以降': 0
+            '初回': 0,
+            'リピーター様': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
