--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #9161cc;
+            background-color: #ff9ccd;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -119,7 +119,7 @@
             padding: 15px;
             border: none;
             border-radius: 4px;
-            background-color: #9161cc;
+            background-color: #ec87cc;
             color: #fff;
             font-size: 18px;
             cursor: pointer;
@@ -172,59 +172,65 @@
             transition: all 0.3s ease;
         }
 
-/* 基本スタイル */
-.info-text {
-    margin: 20px 0;
-    font-family: "Noto Sans JP", "Roboto", sans-serif;
-    font-size: 14px;
-    color: #333; /* 読みやすい濃い文字色 */
-    background-color: #f8f9fa;
-    line-height: 1.8;
-    text-align: left;
-    word-wrap: break-word;
-    padding: 20px;
-    border-radius: 8px;
-    border: 1px solid #ced4da;
-    max-width: 800px; /* 横幅制限 */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
-    overflow-y: auto; /* 長文スクロール対応 */
-}
+        /* 基本スタイル */
+        .info-text {
+            margin: 20px auto;
+            /* 上下20px、左右自動で中央配置 */
+            font-family: "Noto Sans JP", "Roboto", sans-serif;
+            font-size: 14px;
+            color: #333;
+            /* 読みやすい濃い文字色 */
+            background-color: #f8f9fa;
+            line-height: 1.8;
+            text-align: center;
+            /* テキストも中央揃え */
+            word-wrap: break-word;
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #ced4da;
+            max-width: 800px;
+            /* 横幅制限 */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            /* 軽い影を追加 */
+            overflow-y: auto;
+            /* 長文スクロール対応 */
+        }
 
-/* 見出しスタイル */
-.info-text h1 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
+        /* 見出しスタイル */
+        .info-text h1 {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
 
-.info-text h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 15px;
-    margin-bottom: 8px;
-}
+        .info-text h2 {
+            font-size: 16px;
+            font-weight: bold;
+            margin-top: 15px;
+            margin-bottom: 8px;
+        }
 
-/* 強調テキスト */
-.info-text strong {
-    color: #007bff;
-}
+        /* 強調テキスト */
+        .info-text strong {
+            color: #007bff;
+        }
 
-/* モバイル向け調整 */
-@media (max-width: 768px) {
-    .info-text {
-        font-size: 13px;
-        padding: 15px;
-        max-width: 100%;
-    }
+        /* モバイル向け調整 */
+        @media (max-width: 768px) {
+            .info-text {
+                font-size: 13px;
+                padding: 15px;
+                max-width: 100%;
+            }
 
-    .info-text h1 {
-        font-size: 16px;
-    }
+            .info-text h1 {
+                font-size: 16px;
+            }
 
-    .info-text h2 {
-        font-size: 14px;
-    }
-}
+            .info-text h2 {
+                font-size: 14px;
+            }
+        }
 
         .info-textmemo {
             margin-top: 20px;
@@ -258,40 +264,38 @@
 
 <body>
     <div class="container">
-        <h1>りらくぜーしょんるーむ てんてん<br>アンケートフォーム</h1>
-        <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
-        <div class="label">お名前（漢字）</div>
+        <h1>メナード推しメイクアンケート</h1>
+        <div class="info-text">簡単なアンケートになります❤️<br>是非プレゼントをゲットしてくださいね♪</div>
+        <div class="label">お名前(漢字フルネーム)</div>
         <textarea id="message" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">お名前（ひらがな）</div>
+        <div class="label">お名前(ふりがな)</div>
         <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
-        <div class="label">生年月日(例:西暦記載 ○年○月○日)</div>
-        <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">性別</div>
-        <div class="priority-buttons">
-            <button type="button" id="onepriority" onclick="selectpriority(this)">男性</button>
-            <button type="button" id="twopriority" onclick="selectpriority(this)">女性</button>
-        </div>
-
         <div class="label">誕生月</div>
-        <div class="demand-buttons">
-            <button type="button" id="onedemand" onclick="selectdemand(this)">1月</button>
-            <button type="button" id="twodemand" onclick="selectdemand(this)">2月</button>
-            <button type="button" id="threedemand" onclick="selectdemand(this)">3月</button>
-            <button type="button" id="fourdemand" onclick="selectdemand(this)">4月</button>
-            <button type="button" id="fivedemand" onclick="selectdemand(this)">5月</button>
-            <button type="button" id="sixdemand" onclick="selectdemand(this)">6月</button>
-            <button type="button" id="sevendemand" onclick="selectdemand(this)">7月</button>
-            <button type="button" id="eightdemand" onclick="selectdemand(this)">8月</button>
-            <button type="button" id="ninedemand" onclick="selectdemand(this)">9月</button>
-            <button type="button" id="tendemand" onclick="selectdemand(this)">10月</button>
-            <button type="button" id="elevendemand" onclick="selectdemand(this)">11月</button>
-            <button type="button" id="twelvedemand" onclick="selectdemand(this)">12月</button>
+        <div class="priority-buttons">
+            <button type="button" id="onepriority" onclick="selectpriority(this)">1月</button>
+            <button type="button" id="twopriority" onclick="selectpriority(this)">2月</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">3月</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">4月</button>
+            <button type="button" id="fivepriority" onclick="selectpriority(this)">5月</button>
+            <button type="button" id="sixpriority" onclick="selectpriority(this)">6月</button>
+            <button type="button" id="sevenpriority" onclick="selectpriority(this)">7月</button>
+            <button type="button" id="eightpriority" onclick="selectpriority(this)">8月</button>
+            <button type="button" id="ninepriority" onclick="selectpriority(this)">9月</button>
+            <button type="button" id="tenpriority" onclick="selectpriority(this)">10月</button>
+            <button type="button" id="elevenpriority" onclick="selectpriority(this)">11月</button>
+            <button type="button" id="twelvepriority" onclick="selectpriority(this)">12月</button>
         </div>
 
-        <button class="submit-button" onclick="submitForm()">カウンセリングシート送信</button> <!-- フォーム送信ボタン -->
+        <div class="label">メイクする時のこだわりはなんですか？</div>
+        <div class="demand-buttons">
+            <button type="button" id="onedemand" onclick="selectdemand(this)">リップ</button>
+            <button type="button" id="twodemand" onclick="selectdemand(this)">アイブロウ</button>
+            <button type="button" id="threedemand" onclick="selectdemand(this)">マスカラ/アイライン</button>
+        </div>
+
+        <button class="submit-button" onclick="submitForm()">アンケート送信</button> <!-- フォーム送信ボタン -->
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script> <!-- LIFF SDKの読み込み -->
@@ -348,52 +352,44 @@
         function submitForm() {
             const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
-            const message3 = document.getElementById('message3').value;
             priorityCount: priorityCount;
             demandCount: demandCount;
 
             const formData = {
                 message,
                 message2,
-                message3,
                 priorityCount,
                 demandCount,
             };
 
             // フォームデータのチェック
             if (!formData.message) {
-                alert('お名前（漢字）を入力してください。');
+                alert('ご来店日を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.message2) {
-                alert('お名前（ひらがな）を入力してください。');
-                return;
-            }
-
-            // フォームデータのチェック
-            if (!formData.message3) {
-                alert('生年月日を入力してください。');
+                alert('お名前を入力してください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.priorityCount) {
-                alert('性別をご選択ください。');
+                alert('ご職業をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.demandCount) {
-                alert('誕生月をご選択ください。');
+                alert('来店動機をご選択ください。');
                 return;
             }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【お名前（漢字）】\n・${formData.message}\n\n【お名前（ひらがな）】\n・${formData.message2}\n\n【生年月日】\n・${formData.message3}\n\n【性別】\n・${formData.priorityCount}\n\n【誕生月】\n・${formData.demandCount}`
+                text: `≪アンケート≫\n【お名前(漢字フルネーム)】\n・${formData.message}\n\n【お名前(ふりがな)】\n・${formData.message2}\n\n【ご職業】\n・${formData.priorityCount}\n\n【来店動機】\n・${formData.demandCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます。同意書が表示されますので、ご確認ください。');
