--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【メイクする時のこだわりはなんですか？】\n・${formData.demandCount}\n\n【お名前(漢字フルネーム)】\n・${formData.message}\n\n【お名前(ふりがな)】\n・${formData.message2}\n\n【その他】\n・${formData.message3}\n\n【誕生月】\n・${formData.priorityCount}`
+                text: `≪アンケート≫\n【メイクする時のこだわりはなんですか？】\n・${formData.demandCount}\n\n【その他】\n・${formData.message3}\n\n【お名前(漢字フルネーム)】\n・${formData.message}\n\n【お名前(ふりがな)】\n・${formData.message2}\n\n【誕生月】\n・${formData.priorityCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('ご記入ありがとうございます！');
