--- a/index.html
+++ b/index.html
@@ -1099,6 +1099,12 @@
         }
 
         function submitForm() {
+            /* フォームの入力値を取得 */
+            const date1 = formatDate(document.getElementById('date1').value);
+            const date2 = formatDate(document.getElementById('date2').value);
+            const date3 = formatDate(document.getElementById('date3').value);
+        
+        function submitForm() {
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
